--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: "Home"
                     View My Work
                     <i data-lucide="arrow-right"></i>
                 </a>
-                <a href="/assets/resume.pdf" class="btn btn-outline btn-lg" target="_blank">
+                <a href="{{ '/assets/@Pranay Palem_Robotics.pdf' | relative_url }}" class="btn btn-outline btn-lg" target="_blank">
                     <i data-lucide="download"></i>
                     Download Resume
                 </a>
@@ -126,32 +126,39 @@ title: "Home"
         <div class="projects-grid">
             {% for project in site.projects %}
             <div class="project-card">
-                <div class="project-meta">
-                    <span class="project-domain {{ project.domain_slug }}">{{ project.domain }}</span>
-                    <span class="project-period">{{ project.period }}</span>
+                {% if project.preview_image %}
+                <div class="project-preview">
+                    <img src="{{ project.preview_image | relative_url }}" alt="{{ project.title }} preview" class="project-preview-image">
                 </div>
-                <h3 class="project-title">
-                    <a href="{{ project.url | relative_url }}">{{ project.title }}</a>
-                </h3>
-                <p class="project-description">
-                    {{ project.description }}
-                </p>
-                <div class="project-tech">
-                    {% for tech in project.technologies limit:4 %}
-                    <span class="tech-tag">{{ tech }}</span>
-                    {% endfor %}
-                </div>
-                <div class="project-actions">
-                    <a href="{{ project.url | relative_url }}" class="btn btn-primary">
-                        <i data-lucide="arrow-right"></i>
-                        View Details
-                    </a>
-                    {% if project.github_url %}
-                    <a href="{{ project.github_url }}" target="_blank" class="btn btn-outline">
-                        <i data-lucide="github"></i>
-                        View Code
-                    </a>
-                    {% endif %}
+                {% endif %}
+                <div class="project-content">
+                    <div class="project-meta">
+                        <span class="project-domain {{ project.domain_slug }}">{{ project.domain }}</span>
+                        <span class="project-period">{{ project.period }}</span>
+                    </div>
+                    <h3 class="project-title">
+                        <a href="{{ project.url | relative_url }}">{{ project.title }}</a>
+                    </h3>
+                    <p class="project-description">
+                        {{ project.description }}
+                    </p>
+                    <div class="project-tech">
+                        {% for tech in project.technologies limit:4 %}
+                        <span class="tech-tag">{{ tech }}</span>
+                        {% endfor %}
+                    </div>
+                    <div class="project-actions">
+                        <a href="{{ project.url | relative_url }}" class="btn btn-primary">
+                            <i data-lucide="arrow-right"></i>
+                            View Details
+                        </a>
+                        {% if project.github_url %}
+                        <a href="{{ project.github_url }}" target="_blank" class="btn btn-outline">
+                            <i data-lucide="github"></i>
+                            View Code
+                        </a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             {% endfor %}
