Add explicit width to hero-actions for better centering
- Added width: 100% to hero-actions container
- Ensures buttons have full width to center properly
- Applied to both mobile and desktop layouts

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: "Home"
                     View My Work
                     <i data-lucide="arrow-right"></i>
                 </a>
-                <a href="{{ '/assets/@Pranay Palem_Robotics.pdf' | relative_url }}" class="btn btn-outline btn-lg" target="_blank">
+                <a href="{{ '/assets/Pranay_Palem_Robotics.pdf' | relative_url }}" class="btn btn-outline btn-lg" target="_blank">
                     <i data-lucide="download"></i>
                     Download Resume
                 </a>
