--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ title: "Home"
             
             <div class="domain-card">
                 <div class="domain-icon simulation">
-                    <i data-lucide="cube"></i>
+                    <i data-lucide="cpu"></i>
                 </div>
                 <h3 class="domain-title">Simulation</h3>
                 <p class="domain-description">
