Icon cosmetic change

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ title: "Home"
                         {{ project.description }}
                     </p>
                     <div class="project-tech">
-                        {% for tech in project.technologies limit:4 %}
+                        {% for tech in project.technologies limit:3 %}
                         <span class="tech-tag">{{ tech }}</span>
                         {% endfor %}
                     </div>
@@ -202,6 +202,7 @@ title: "Home"
                     <a href="https://numpy.org/" target="_blank"><img src="https://img.shields.io/badge/NumPy-%23013243.svg?style=for-the-badge&logo=NumPy&logoColor=white" alt="NumPy"></a>
                     <a href="https://wandb.ai/" target="_blank"><img src="https://img.shields.io/badge/Wandb-%23FFBE00.svg?style=for-the-badge&logo=WeightsAndBiases&logoColor=white" alt="Wandb"></a>
                     <a href="https://fastapi.tiangolo.com/" target="_blank"><img src="https://img.shields.io/badge/FastAPI-%23009688.svg?style=for-the-badge&logo=FastAPI&logoColor=white" alt="FastAPI"></a>
+                    <a href="https://matplotlib.org/" target="_blank"><img src="https://img.shields.io/badge/matplot-%23ffffff.svg?style=for-the-badge&logo=Matplotlib&logoColor=black" alt="matplot"></a>
                     <img src="https://img.shields.io/badge/Computer%20Vision-%23FF6B35.svg?style=for-the-badge&logo=opencv&logoColor=white" alt="Computer Vision">
                     <img src="https://img.shields.io/badge/NLP-%234285F4.svg?style=for-the-badge&logo=google&logoColor=white" alt="NLP">
                     <img src="https://img.shields.io/badge/Deep%20Learning-%23FF9500.svg?style=for-the-badge&logo=tensorflow&logoColor=white" alt="Deep Learning">
